Made changes to wrapper mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ li, p, a{
     width: 95%;
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 110px 240px 1940px 150px;
+    grid-template-rows: 4% 9% 82% 5%;
     box-shadow: 1px 1px 8px hsl(0, 0%, 53%);
     border: 1px solid 	hsl(0, 0%, 53%);
     border-radius: 8px;
@@ -160,6 +160,7 @@ footer{
 footer>p{
   color: hsl(0, 0%, 100%);
   font-size: 1.0rem;
+  margin-top: 1px;
 }
 
 li{
@@ -167,7 +168,7 @@ li{
 }
 
 footer>ul{
-  margin-top: 10px;
+  margin-top: 2px;
 }
 
 footer a{
